# markdown-customblocks

./: .gitignore  pyproject.toml
customblocks/: customblocks.py  entrypoints.py  generators.py
customblocks/utils/: __init__.py  fetcher.py  pageinfo.py
tests/: conftest.py  customblocks_test.py  fetcher_test.py  generators_test.py  hyperscript_test.py  image_test.py  pageinfo_test.py
